--- a/requirements.txt
+++ b/requirements.txt
@@ -7,7 +7,7 @@ scikit-learn>=1.1.0
 xgboost>=1.6.0
 
 # Deep Learning / LLM
-openai>=1.0.0
+google-generativeai>=0.3.0
 
 # Visualização
 matplotlib>=3.5.0
